--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -1,16 +1,39 @@
 .sidebar-wrapper{
-  width: 200px;
+  width: 400px;
   height: 100vh;
-  background: red;
   padding: 20px;
+  border: 1px solid black;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
   align-items: center;
+  .metamask-btn{
+    width: 100%;
+    height: 50px;
+  }
+  .balance{
+    align-self: flex-end;
+    display: flex;
+    flex-direction: column;
+    margin: 20px 0;
+  }
   .tab-box{
+    align-self: flex-start;
     .tabs{
       display: flex;
       flex-direction: column;
+      li{
+        margin: 5px 0;
+        a{
+          font-size: 20px;
+          cursor: pointer;
+        }
+      }
     }
+  }
+  .discord-btn{
+    width: 100%;
+    height: 50px;
+    margin-top: 20px;
   }
 }
