--- a/src/pages/style.scss
+++ b/src/pages/style.scss
@@ -255,5 +255,49 @@
   }
   .missions-list{
     margin-left: 20px;
+    width: 100%;
+    .list-box{
+      width: 100%;
+      height: 80vh;
+      overflow-y: scroll;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      .result-box{
+        display: flex;
+        justify-content: space-between;
+        border: 1px solid black;
+        align-items: flex-start;
+        margin: 10px 0;
+        padding: 20px;
+        box-sizing: border-box;
+        height: 120px;
+        div{
+          height: 100%;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          align-items: center;
+        }
+        p{
+          font-size: 14px;
+          margin:0;
+        }
+        .btns-container{
+          height: 100%;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          margin-right: 10px;
+          button{
+            height: 45%;
+            width: 100%;
+          }
+        }
+        .share-btn{
+          height: 100%;
+        }
+      }
+    }
   }
 }
