--- a/src/App.scss
+++ b/src/App.scss
@@ -2,4 +2,7 @@
   display: flex;
   justify-content: space-between;
   box-sizing: border-box;
+  background: url("./assets/images/Hangar_BG.svg") center no-repeat;
+  background-size: cover;
+  padding: 0 30px;
 }
