--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -1,16 +1,13 @@
 .sidebar-wrapper{
   width: 400px;
   height: 100vh;
-  padding: 20px;
-  border: 1px solid black;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  .metamask-btn{
-    width: 100%;
-    height: 50px;
-  }
+  border-right: 0.5px solid rgba(3, 126, 235, 0.50);
+  border-left: 0.5px solid rgba(3, 126, 235, 0.50);
   .balance{
     align-self: flex-end;
     display: flex;
@@ -18,22 +15,111 @@
     margin: 20px 0;
   }
   .tab-box{
+    width: 100%;
     align-self: flex-start;
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+      }
+      to {
+        opacity: 1;
+      }
+    }
     .tabs{
       display: flex;
       flex-direction: column;
+      padding: 0;
+      position: relative;
+      img{
+        position: absolute;
+      }
       li{
-        margin: 5px 0;
+        display: flex;
+        align-items: center;
+        margin: 17.5px 0px;
+        width: 100%;
+        .active-mark{
+          position: absolute;
+          left: 0;
+          width: 10px;
+          height: 90px;
+          background: #FAFAFA;
+          filter: drop-shadow(0px 0px 7px RGBA(0,134,251,1))
+                  drop-shadow(0px 0px 16px RGBA(0,134,251,1))
+                  drop-shadow(0px 0px 32px RGBA(0,134,251,1))
+                  drop-shadow(0px 0px 120px RGBA(0,134,251,1));
+        }
         a{
+          animation: fadeIn 0.5s ease-in-out forwards;
+          position: relative; /* Add this line */
+          transition: width 0.5s ease-in;
+          margin-left: 30px;
           font-size: 20px;
           cursor: pointer;
+          color: #FAFAFA;
+          text-shadow: 0px 0px 7px #0086FB, 0px 0px 16px #0086FB, 0px 0px 32px #0086FB, 0px 0px 120px #0086FB;
+          font-family: QuanticoItalic;
+          font-size: 20px;
+          text-decoration: none;
+          font-style: italic;
+          font-weight: 400;
+          line-height: 28px; /* 140% */
+          letter-spacing: 3px;
+          text-transform: uppercase;
         }
+      }
+      li:focus, .active{
+        margin: 0;
+        width: 100%;
+        padding: 30px;
+        box-sizing: border-box;
+        border-top: 0.5px solid rgba(0, 134, 251, 0.50);
+        border-bottom: 0.5px solid rgba(0, 134, 251, 0.50);
+        animation: fadeIn 0.7s ease-in-out forwards;
+        position: relative; /* Add this line */
+        transition: width 0.7s ease-in-out;
       }
     }
   }
-  .discord-btn{
+  .metamask{
     width: 100%;
-    height: 50px;
-    margin-top: 20px;
+    padding: 30px 20px;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-top: 0.5px solid rgba(0, 134, 251, 0.50);
+    .meta-des{
+      font-weight: 400;
+      text-transform: uppercase;
+      span{
+        color: #FAFAFA;
+        leading-trim: both;
+        text-edge: cap;
+        text-shadow: 0px 0px 7px #CFB210, 0px 0px 16px #CFB210, 0px 0px 32px #CFB210, 0px 0px 120px #CFB210;
+        font-family: QuanticoItalic;
+        font-size: 10px;
+        letter-spacing: 1.5px;
+      }
+      p{
+        color: #FAFAFA;
+        text-shadow: 0px 0px 7px #CFB210, 0px 0px 16px #CFB210, 0px 0px 32px #CFB210, 0px 0px 120px #CFB210;
+        font-family: QuanticoItalic;
+        font-size: 20px;
+        margin: 0;
+        text-transform: uppercase;
+        letter-spacing: 3px;
+      }
+    }
+    img{
+      width: 54px;
+      height: 50px;
+      cursor: pointer;
+      -webkit-filter: drop-shadow( 1px 1px 1px RGBA(207,178,16,1));
+      filter: drop-shadow(0px 0px 7px rgba(207, 178, 16, 1))
+              drop-shadow(0px 0px 16px rgba(207, 178, 16, 1))
+              drop-shadow(0px 0px 32px rgba(207, 178, 16, 1))
+              drop-shadow(0px 0px 120px rgba(207, 178, 16, 1));
+    }
   }
 }
