--- a/src/pages/style.scss
+++ b/src/pages/style.scss
@@ -1,7 +1,6 @@
 .hangar-wrapper{
   width: 100%;
   height: 100vh;
-  border: 2px solid black;
   padding: 20px;
   box-sizing: border-box;
   display: flex;
@@ -54,19 +53,30 @@
   .jet-box{
     width: 100%;
     height: 100%;
-    background: aliceblue;
-    margin-left: 20px;
+    background: transparent;
     display: flex;
     justify-content: center;
     align-items: center;
     .wrapper{
-      width: 100%;
-      height: 450px;
+      position: relative;
+      width: 690px;
+      max-height: 650px;
+      height: 100%;
       display: flex;
       border: 1px solid black;
       justify-content: center;
       flex-direction: column;
       align-items: center;
+      background: url('../assets/images/Group 12.svg') center no-repeat;
+      background-size: cover;
+      .nft-img{
+        position: absolute;
+        top: -10%;
+        right: 0;
+        width: 178px;
+        height: 178px;
+        background: url('../assets/images/nft_img.svg');
+      }
       .no-plane{
         width: 400px;
         height: 40px;
@@ -76,14 +86,62 @@
         flex-direction: column;
         align-items: center;
       }
+      .mint-now{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        span, p{
+          color: #FAFAFA;
+          text-align: center;
+          leading-trim: both;
+          text-edge: cap;
+          text-shadow: 0px 0px 7px #0086FB, 0px 0px 16px #0086FB, 0px 0px 32px #0086FB, 0px 0px 120px #0086FB;
+          font-family: QuanticoItalic;
+          font-style: italic;
+          font-weight: 400;
+          line-height: 40px; /* 166.667% */
+          text-transform: uppercase;
+        }
+        span{
+          font-size: 24px;
+          letter-spacing: 3.6px;
+        }
+        p{
+          margin-top: 5px;
+          font-size: 32px;
+          letter-spacing: 4.8px;
+        }
+      }
       .choices{
-        margin-top: 40px;
-        width: 50%;
+        margin-top: 30px;
+        width: 470px;
         display: flex;
         justify-content: space-between;
-        div{
-          background: antiquewhite;
-          margin: 10px;
+        button{
+          background: rgba(0, 134, 251, 0.10);
+          border: none;
+          width: 230px;
+          padding: 15px 20px;
+          box-sizing: border-box;
+          div{
+            width: 100%;
+            height: 100%;
+            margin: 0px;
+            font-family: QuanticoItalic;
+            color: #FAFAFA;
+            text-shadow: 0px 0px 7px #0086FB, 0px 0px 16px #0086FB;
+            line-height: 30px; /* 150% */
+            text-transform: uppercase;
+            span{
+              font-size: 20px;
+              letter-spacing: 1px;
+            }
+            p{
+              font-size: 24px;
+              letter-spacing: 3.6px;
+              margin: 0px 0 0;
+            }
+          }
         }
       }
     }
